Webpack now injects the correct api-url during build depending on mode (prod/dev)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 script:
-  - webpack
+  - npm install webpack -g
+  - npm install webpack-cli -g
+  - npm install
+  - NODE_ENV=production webpack --mode=production
   - bundle exec jekyll build
 deploy:
   provider: surge
