translate booking component, add general terms and privacy policy

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "i18next": "^11.8.0",
     "moment": "^2.22.2",
     "moment-range": "^3.0.3",
     "react": "^16.4.1",
     "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.4.1",
+    "react-i18next": "^7.12.0",
     "react-lightbox-component": "^1.2.1",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
