--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-command": "^0.4.1"
+  },
+  "dependencies": {
+    "remarkable": "^1.7.1"
   }
 }
