--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-command": "^0.4.1"
   },
   "dependencies": {
+    "react-loader-spinner": "^2.0.6",
     "remarkable": "^1.7.1"
   }
 }
